# blinky-ci-cd

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  newlib_interface.c.patched
.docker/: Dockerfile  README.md  README_CI_CD.md
.github/: Dockerfile  README.md
.github/workflows/: deploy.yml
.gitlab/: .gitlab-ci.yml  .gitlab-ci_dind.yml  .gitlab-ci_image.yml  Dockerfile  README.md  build.sh  test.sh
McuLib/: CMakeLists.txt  LICENSE.md  MCUXpresso_CMakeLists.txt  McuLibVersion.h  README.md  RPxxxx_CMakeLists.txt  Template_IncludeMcuLibConfig.h  info.txt
McuLib/FatFS/: McuFatFS.c  McuFatFS.h  McuFatFS_CardPins.c  McuFatFS_CardPins.h  McuFatFS_CardPins_config.h  McuFatFSconfig.h  ffconf_template.h  readme.txt
McuLib/FreeRTOS/: FreeRTOS_license.txt  FreeRTOShooks.c
McuLib/HD44780/: DB01.c  DB01.h  DB01config.h  DB11.c  DB11.h  DB11config.h  DB21.c  DB21.h  DB21config.h  DB31.c  DB31.h  DB31config.h  DB41.c  DB41.h  DB41config.h  DB51.c  DB51.h  DB51config.h  DB61.c  DB61.h  DB61config.h  DB71.c  DB71.h  DB71config.h  EN1.c  EN1.h  EN1config.h  EN2.c  EN2.h  EN2config.h  McuHD44780.c  McuHD44780.h  McuHD44780config.h  RS1.c  RS1.h  RS1config.h  RW1.c  RW1.h  RW1config.h
McuLib/LittlevGL/: .gitignore  CMakeLists.txt  lv_conf_template.h
McuLib/Modbus/: McuHeidelberg.c  McuHeidelberg.h  McuHeidelberg_config.h  McuModbus.c  McuModbus.h  McuModbus_config.h  readme.txt
McuLib/RNet/: McuNRF24L01.c  McuNRF24L01.h  McuNRF24L01config.h  McuRNet.c  McuRNet.h  McuRNetConfig.h  RApp.c  RApp.h  RMAC.c  RMAC.h  RMSG.c  RMSG.h  RNWK.c  RNWK.h  RPHY.c  RPHY.h  RStack.c  RStack.h  RStdIO.c  RStdIO.h  Radio.c  Radio.h  RadioNRF24.h  readme.txt
McuLib/SEGGER_RTT/: RTT_Syscalls_GCC.c  SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h  SEGGER_RTT_printf.c
McuLib/SEGGER_Sysview/: License_SystemView.txt  McuSystemView.c  McuSystemView.h  McuSystemViewconfig.h  SEGGER_SYSVIEW.c  SEGGER_SYSVIEW.h  (+6 more)
doxy/: .gitignore  Doxyfile
gcovr/: README.md
src/: CMakeLists.txt  IncludeMcuLibConfig.h  application.c  application.h  gcov_test.c  gcov_test.h  leds.c  leds.h  leds_config.h  lwipopts.h  main.c  platform.c  platform.h  sample.c  sample.h  tusb_config.h  usb_descriptors.c
src/tests/: CMakeLists.txt  test_leds.c  test_leds.h  tests.c  tests.h
(+425 files in other folders)
